--- a/platforms/android/assets/www/calendar.html
+++ b/platforms/android/assets/www/calendar.html
@@ -200,9 +200,9 @@
 	</div>
 
 	<div class="row">
-		<div class="col-xs-6 col-xs-4 spec"><a href="specie_select.html">SPECIES</a></div>
-		<div class="col-xs-6 col-xs-4 habi"><a href="#">HABITAT</a></div>
-		<div class="col-xs-6 col-xs-4 cal"><a href="calendar.html">CALENDAR</a></div>
+		<div class="col-xs-6 col-xs-4 spec"><a href="specie_select.html" style="color:white;">SPECIES</a></div>
+		<div class="col-xs-6 col-xs-4 habi"><a href="#" style="color:white;">HABITAT</a></div>
+		<div class="col-xs-6 col-xs-4 cal"><a href="calendar.html" style="color:white;">CALENDAR</a></div>
 	</div>
 
 	<div id="calendar"></div>
