--- a/www/others/gps/gps.html
+++ b/www/others/gps/gps.html
@@ -167,7 +167,7 @@
 <body>
 
 	<div class="container top-banner">
-	  <img src="assets/projsuf_logo.png" class="img-responsive logo" />
+	  <img src="../../assets/projsuf_logo.png" class="img-responsive logo" />
 		<h3>MAKATI</h3><br/><br/>
 			<h4 class="coordinatesss">COORDINATES: 14.5547° N, 121.0244° E</h4>
 	  
