--- a/platforms/android/assets/www/others/vms/vms.html
+++ b/platforms/android/assets/www/others/vms/vms.html
@@ -162,7 +162,7 @@
 <body>
 
 	<div class="container top-banner">
-	  <img src="assets/projsuf_logo.png" class="img-responsive logo" />
+	  <img src="../../assets/projsuf_logo.png" class="img-responsive logo" />
 		<h3>ZAMBOANGA</h3><br/><br/>
 			<h4 class="coordinatesss">COORDINATES: 6.9214°N, 122.0790°E</h4>
 	  
