FINAL nA FOR PITCHING!

--- a/platforms/android/assets/www/info_page.html
+++ b/platforms/android/assets/www/info_page.html
@@ -143,7 +143,7 @@
 
 	 <footer class="footer">
       <div class="container">
-        <a class="text-muted" href="#!">GO TO SPECIES<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
+        <a class="text-muted" href="specie_select.html">GO TO SPECIES<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
       </div>
     </footer>
 
