--- a/platforms/android/assets/www/others/gps/gps.html
+++ b/platforms/android/assets/www/others/gps/gps.html
@@ -198,7 +198,7 @@
 
 	<footer class="footer" style="margin-left:-15px">
       <div class="container">
-        <a class="text-muted" href="#!"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> BACK</a>
+        <a class="text-muted" href="../vms/vms.html"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> BACK</a>
       </div>
     </footer>
 
