--- a/www/others/vms/vms.html
+++ b/www/others/vms/vms.html
@@ -199,7 +199,7 @@
 
 	<footer class="footer" style="margin-left:-15px">
       <div class="container">
-        <a class="text-muted" href="#!"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> BACK</a>
+        <a class="text-muted" href="../../calendar.html"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> BACK</a>
       </div>
     </footer>
 
