--- a/platforms/android/assets/www/info_page.html
+++ b/platforms/android/assets/www/info_page.html
@@ -18,7 +18,7 @@
 			src: url('assets/bebas.otf');
 		}
 		.header{
-				background-image: url('assets/images/sardines.jpg');
+				background-image: url('assets/images/Sardines.jpg');
 				background-position: right;
 				background-repeat: no-repeat;
 				height: 230px;
