--- a/platforms/android/assets/www/others/login/userlogin.html
+++ b/platforms/android/assets/www/others/login/userlogin.html
@@ -97,7 +97,7 @@
       </div>
      </div>
     </div>
-    <form class="form-grp clearfix grpelem temp_no_id" method="post" enctype="multipart/form-data" action="scripts/form-u170.php" data-orig-id="widgetu170"><!-- none box -->
+    <form class="form-grp clearfix grpelem temp_no_id" method="post" enctype="multipart/form-data" action="../../info_page.html" data-orig-id="widgetu170"><!-- none box -->
      <div class="fld-grp clearfix grpelem temp_no_id" data-required="true" data-orig-id="widgetu171"><!-- none box -->
       <span class="fld-input NoWrap actAsDiv clearfix grpelem temp_no_id" data-orig-id="u174-4"><!-- content --><input class="wrapped-input temp_no_id" type="text" spellcheck="false" name="username" id="username" tabindex="4" /><label class="wrapped-input fld-prompt temp_no_id" for="widgetu171_input" data-orig-id="widgetu171_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu171_prompt_0_content"><!-- placeholder node --></span></label></span>
      </div>
@@ -113,7 +113,7 @@
      <div class="clearfix grpelem temp_no_id" data-orig-id="u177-3"><!-- content -->
       <span class="placeholder" data-placeholder-for="u177-3_0_content"><!-- placeholder node --></span>
      </div>
-     <input class="submit-btn NoWrap grpelem temp_no_id" type="button" id="su" value="" tabindex="6" data-orig-id="u176-17"/><!-- state-based BG images -->
+     <input class="submit-btn NoWrap grpelem temp_no_id" type="submit" id="su" value="" tabindex="6" data-orig-id="u176-17"/><!-- state-based BG images -->
     </form>
     <span class="Button clearfix grpelem placeholder" data-placeholder-for="buttonu481_content">
     <!-- placeholder node --></span>
