--- a/platforms/android/assets/www/others/login/vessel-login.html
+++ b/platforms/android/assets/www/others/login/vessel-login.html
@@ -97,7 +97,7 @@
       </div>
      </div>
     </div>
-    <form class="form-grp clearfix grpelem temp_no_id" method="post" enctype="multipart/form-data" action="" data-orig-id="widgetu599"><!-- none box -->
+    <form class="form-grp clearfix grpelem temp_no_id" method="post" enctype="multipart/form-data" action="../../info_page.html" data-orig-id="widgetu599"><!-- none box -->
      <div class="fld-grp clearfix grpelem temp_no_id" data-required="true" data-orig-id="widgetu608"><!-- none box -->
       <span class="fld-input NoWrap actAsDiv clearfix grpelem temp_no_id" data-orig-id="u610-4"><!-- content --><input class="wrapped-input temp_no_id" type="text" spellcheck="false" name="custom_U608" tabindex="4" id="license_number" /><label class="wrapped-input fld-prompt temp_no_id" for="widgetu608_input" data-orig-id="widgetu608_prompt"><span class="actAsPara placeholder" data-placeholder-for="widgetu608_prompt_0_content"><!-- placeholder node --></span></label></span>
      </div>
@@ -113,7 +113,7 @@
      <div class="clearfix grpelem temp_no_id" data-orig-id="u607-3"><!-- content -->
       <span class="placeholder" data-placeholder-for="u607-3_0_content"><!-- placeholder node --></span>
      </div>
-     <input class="submit-btn NoWrap grpelem temp_no_id" type="button" id="vessel_su" value="" tabindex="6" data-orig-id="u601-17"/><!-- state-based BG images -->
+     <input class="submit-btn NoWrap grpelem temp_no_id" type="submit" id="vessel_su" value="" tabindex="6" data-orig-id="u601-17"/><!-- state-based BG images -->
     </form>
     <span class="Button clearfix grpelem placeholder" data-placeholder-for="buttonu612_content"><!-- placeholder node --></span>
     <div class="verticalspacer"></div>
