--- a/platforms/android/assets/www/others/vms/vms.html
+++ b/platforms/android/assets/www/others/vms/vms.html
@@ -12,15 +12,10 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,700' rel='stylesheet' type='text/css'>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	 <!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-	<link href='fullcalendar.css' rel='stylesheet' />
-	<link href='fullcalendar.print.css' rel='stylesheet' media='print' />
-	<script src='moment.min.js'></script>
-	<script src='jquery.min.js'></script>
-	<script src='fullcalendar.min.js'></script>
+	<script src='../../jquery.min.js'></script>
 	<script>
 
 	$(document).ready(function() {
@@ -32,16 +27,15 @@
 			defaultView: 'month',
 			editable: true,
 		});
-		
+
+
 	});
-
-
 
 </script>
 <style>
 	@font-face{
 			font-family: 'Bebas';
-			src: url('assets/bebas.otf');
+			src: url('../../assets/bebas.otf');
 		}
 	body {
 		font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
@@ -57,6 +51,7 @@
 		body {
 		  /* Margin bottom by footer height */
 		  margin-bottom: 60px;
+		  overflow: hidden;
 		}
 		.footer {
 		  position: absolute;
@@ -152,6 +147,14 @@
 			float: left;
 			padding: 0;
 			margin-left: -15px;
+		}
+		.hideAds{
+			display: none!important;
+		}
+		iframe{
+			width: 100%;
+			height: 100%;
+			position: absolute;
 		}
 </style>
     <script type="text/javascript" src="cordova.js"></script>
