--- a/www/license-list.html
+++ b/www/license-list.html
@@ -12,7 +12,9 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,700' rel='stylesheet' type='text/css'>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
+
 	 <!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
@@ -21,6 +23,7 @@
 	<script src='moment.min.js'></script>
 	<script src='jquery.min.js'></script>
 	<script src='fullcalendar.min.js'></script>
+
 	<script>
 
 	$(document).ready(function() {
@@ -32,10 +35,16 @@
 			defaultView: 'month',
 			editable: true,
 		});
-		
+
 	});
 
 
+	//paste this code under the head tag or in a separate js file.
+	// Wait for window load
+	$(window).load(function() {
+		// Animate loader off screen
+		$(".se-pre-con").fadeOut("slow");;
+	});
 
 </script>
 <style>
@@ -121,7 +130,10 @@
 			color:white;
 			font-size: 22px;
 			margin-left: 20px;
-			mar
+		}
+		.list-group{
+			overflow-y: scroll;
+			height: 400px; 
 		}
 		.list-group .list-group-item{
 			background-color: #FE802B;
@@ -133,10 +145,21 @@
 		.white-label{
 			background-color: #fff;
 		}
+		.no-js #loader { display: none;  }
+		.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+		.se-pre-con {
+			position: fixed;
+			left: 0px;
+			top: 0px;
+			width: 100%;
+			height: 100%;
+			z-index: 9999;
+			background: url(img/Preloader.gif) center no-repeat #fff;
+		}
 </style>
 </head>
 <body>
-
+<div class="se-pre-con"></div>
 	<div class="container top-banner" style="margin-bottom:-20px">
 	  <img src="assets/projsuf_logo.png" class="img-responsive logo" />
 		<h3>ZAMBOANGA</h3><br/><br/>
@@ -144,21 +167,12 @@
 	</div>
 
 	<div class="white-label">
-	<p align="right" style="margin-top:30px;margin-right:20px;font-family:Bebas">Total number of influx:5</p>
+	<p id="influxtext" align="right" style="margin-top:30px;margin-right:20px;font-family:Bebas"></p>
 	</div>
 
 	<ul class="list-group">
-		<li class="list-group-item"><a href="others/vms/vms.html" class="text-center" style="font-family:Roboto">1234-567-890<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>
-		<li class="list-group-item"><a href="#!" class="text-center" style="font-family:Roboto">1234-567-890</a></li>
-		<li class="list-group-item"><a href="#!" class="text-center" style="font-family:Roboto">1234-567-890</a></li>
-		<li class="list-group-item"><a href="#!" class="text-center" style="font-family:Roboto">1234-567-890</a></li>
-		<li class="list-group-item"><a href="#!" class="text-center" style="font-family:Roboto">1234-567-890</a></li>
+
 	</ul>
-
-
-
-
-
 	<footer class="footer">
       <div class="container">
         <a class="text-muted" href="calendar.html"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> BACK</a>
@@ -166,7 +180,23 @@
     </footer>
 
  </div>
-
+<script type="text/javascript">
+	$(function(){
+		var splitter = sessionStorage.getItem('licenses').split(",");
+		console.log(splitter[0]);
+		if(splitter[0] == ""){
+			$("#influxtext").html("Total number of influx: 0");
+		}
+		else{
+			$("#influxtext").html("Total number of influx: "+splitter.length);
+			for(var x = 0 ; x< splitter.length; x++){
+				$('.list-group').append('<li class="list-group-item"><a href="others/vms/vms.html"  class="text-center" style="font-family:Roboto">'+splitter[x]+'<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>');
+			}
+		}
+		
+		//sessionStorage.setItem('licenses', "");
+	});
+</script>
 
 
 </body>
