--- a/www/others/gps/gps.html
+++ b/www/others/gps/gps.html
@@ -162,21 +162,21 @@
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="../../js/index.js"></script>
     <script src='../../js/jquery.js'></script>
-	<script src="../../js/map.js"></script>
+	<script src="map.js"></script>
 </head>
 <body>
 
 	<div class="container top-banner">
 	  <img src="../../assets/projsuf_logo.png" class="img-responsive logo" />
-		<h3>MAKATI</h3><br/><br/>
-			<h4 class="coordinatesss">COORDINATES: 14.5547° N, 121.0244° E</h4>
+		<h3 id="city"></h3><br/><br/>
+			<h4 class="coordinatesss"></h4>
 	  
 	</div>
 	<div class="container second-banner">
 		<div class="row">
 			<div class="col-md-8" align="left" class="color-whites">	
 				<h2 style="color:white; margin-top:10px">1234-567-890</h2>
-				<p style="color:white;margin-top:-5px">8.3886* N, 123.16898 E</p>
+				<p class="coordinatesss2" style="color:white;margin-top:-5px"></p>
 				<p style="color:white;font-size:10px;margin-top:-10px">BMC Beta |VN| 0 knots/0</p>
 				<p style="color:white;font-size:10px;margin-top:-10px">Position Received: 2mins ago</p>
 				<p style="color:white;font-size:10px;margin-top:-10px">Destination: Taiwan</p>
