--- a/www/modules/habitat.html
+++ b/www/modules/habitat.html
@@ -32,7 +32,7 @@
 			defaultView: 'month',
 			editable: true,
 		});
-		
+
 	});
 
 
@@ -41,7 +41,7 @@
 <style>
 	@font-face{
 			font-family: 'Bebas';
-			src: url('assets/bebas.otf');
+			src: url('../assets/bebas.otf');
 		}
 	body {
 		font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
@@ -107,7 +107,7 @@
 			font-family: 'Bebas';
 			color: white;
 			float: right;
-			
+
 		}
 		h3,h4{
 			margin-top: -60px;
@@ -118,7 +118,7 @@
 			position: relative;
 		}
 		.second-banner{
-			background-image: url('assets/images/sardines_head.jpg');
+			background-image: url('../assets/images/sardines_head.jpg');
 			background-repeat: no-repeat;
 			background-position: center;
 			height: 80px;
@@ -157,24 +157,24 @@
 <body>
 
 	<div class="container top-banner">
-	  <img src="assets/projsuf_logo.png" class="img-responsive logo" />
+	  <img src="../assets/projsuf_logo.png" class="img-responsive logo" />
 		<h3>ZAMBOANGA</h3><br/><br/>
 			<h4>COORDINATES: 6.9214°N, 122.0790°E</h4>
-	  
+
 	</div>
 	<div class="container second-banner">
 		<h2 class="text-center sardines">SARDINES</h3>
-		
+
 	</div>
 
 	<div class="row">
 		<div class="col-xs-6 col-xs-4 spec"><a href="specie_select.html">SPECIES</a></div>
-		<div class="col-xs-6 col-xs-4 habi"><a href="#">HABITAT</a></div>
+		<div class="col-xs-6 col-xs-4 habi"><a href="habitat.html">HABITAT</a></div>
 		<div class="col-xs-6 col-xs-4 cal"><a href="calendar.html">CALENDAR</a></div>
 	</div>
 
 	<div class="container">
-		<img src="assets/images/habitat_sardines.png" class="img-responsive habitat_info" />
+		<img src="../assets/images/habitat_sardines.png" class="img-responsive habitat_info" />
 	</div>
 
 	<footer class="footer">
