--- a/www/modules/index.html
+++ b/www/modules/index.html
@@ -12,14 +12,14 @@
 
         <!-- Styles -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-    
+
         <title>Sufishint</title>
         <script type="text/javascript" src="js/jquery.js"></script>
-       
+
         <style>
               @font-face{
             font-family: Bebas;
-            src: url('fonts/bebas.otf');
+            src: url('../assets/bebas.otf');
         }
         body {
             background-color: #4089AA;
@@ -97,15 +97,15 @@
         <div id="map"></div>
         <div id="status"></div>
         <div class="container text-center">
-            <img src="img/a.png" class="logo img-responsive center-block" />
+            <img src="../assets/projsuf_logo.png" class="logo img-responsive center-block" />
 
             <p class="head_one">Promoting Sustainable Fisheries through <br/> Responsible Fishing</p>
             <p class="head_two">LOGIN AS</p>
-            <a href="others/login/userlogin.html" class="btn btn-primary">SUFISHINT WATCHER</a>
-            <a href="others/login/vessel-login.html" class="btn btn-warning">COMMERCIAL VESSEL</a>
+            <a href="../others/login/userlogin.html" class="btn btn-primary">SUFISHINT WATCHER</a>
+            <a href="../others/login/vessel-login.html" class="btn btn-warning">COMMERCIAL VESSEL</a>
         </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="../cordova.js"></script>
+        <script type="text/javascript" src="../js/index.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js" integrity="sha384-I6F5OKECLVtK/BL+8iSLDEHowSAfUo76ZL9+kGAgTRdiByINKJaqTPH/QVNS1VDb" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     </body>
