--- a/www/modules/info_page.html
+++ b/www/modules/info_page.html
@@ -18,7 +18,7 @@
 			src: url('assets/bebas.otf');
 		}
 		.header{
-				background-image: url('assets/images/Sardines.jpg');
+				background-image: url('../assets/images/Sardines.jpg');
 				background-position: right;
 				background-repeat: no-repeat;
 				height: 230px;
@@ -110,7 +110,7 @@
 <body>
 
 	<div class="container header">
-		<img src="assets/projsuf_logo.png" class="img-responsive" />
+		<img src="../assets/projsuf_logo.png" class="img-responsive" />
 			<h1 class="text-center">ZAMBOANGA</h1>
 		<div class="row">
 			<div class="col-md-1">
@@ -128,7 +128,7 @@
 	</div>
 	<br/>
 	<div class="container">
-		<p>&nbsp;&nbsp;Zamboanga City (Zamboangueño Chavacano: Ciudad de Zamboanga) is a highly urbanized city located in Mindanao, Philippines. It has a population of 807,129 people as of the 1 May 2010 census. Zamboanga is the 6th most populous and 3rd largest city by land area in the Philippines.[3][4] It is the commercial and industrial center of the Zamboanga Peninsula Region.</p> 
+		<p>&nbsp;&nbsp;Zamboanga City (Zamboangueño Chavacano: Ciudad de Zamboanga) is a highly urbanized city located in Mindanao, Philippines. It has a population of 807,129 people as of the 1 May 2010 census. Zamboanga is the 6th most populous and 3rd largest city by land area in the Philippines.[3][4] It is the commercial and industrial center of the Zamboanga Peninsula Region.</p>
 		<p>Fishing Policies/Regulation</p>
 		<p>1. License and Permits</p>
 		<p>2. Report of Fish Caught</p>
