--- a/www/modules/license-list.html
+++ b/www/modules/license-list.html
@@ -50,7 +50,7 @@
 <style>
 	@font-face{
 			font-family: 'Bebas';
-			src: url('assets/bebas.otf');
+			src: url('../assets/bebas.otf');
 		}
 	body {
 		font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
@@ -109,7 +109,7 @@
 			font-family: 'Bebas';
 			color: white;
 			float: right;
-			
+
 		}
 		h3,h4{
 			margin-top: -60px;
@@ -133,7 +133,7 @@
 		}
 		.list-group{
 			overflow-y: scroll;
-			height: 400px; 
+			height: 400px;
 		}
 		.list-group .list-group-item{
 			background-color: #FE802B;
@@ -161,7 +161,7 @@
 <body>
 <div class="se-pre-con"></div>
 	<div class="container top-banner" style="margin-bottom:-20px">
-	  <img src="assets/projsuf_logo.png" class="img-responsive logo" />
+	  <img src="../assets/projsuf_logo.png" class="img-responsive logo" />
 		<h3>ZAMBOANGA</h3><br/><br/>
 			<h4>COORDINATES: 6.9214°N, 122.0790°E</h4>
 	</div>
@@ -190,10 +190,10 @@
 		else{
 			$("#influxtext").html("Total number of influx: "+splitter.length);
 			for(var x = 0 ; x< splitter.length; x++){
-				$('.list-group').append('<li class="list-group-item"><a href="others/vms/vms.html"  class="text-center" style="font-family:Roboto">'+splitter[x]+'<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>');
+				$('.list-group').append('<li class="list-group-item"><a href="../others/vms/vms.html"  class="text-center" style="font-family:Roboto">'+splitter[x]+'<span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>');
 			}
 		}
-		
+
 		//sessionStorage.setItem('licenses', "");
 	});
 </script>
