--- a/www/index.html
+++ b/www/index.html
@@ -15,11 +15,11 @@
 
         <title>Sufishint</title>
         <script type="text/javascript" src="js/jquery.js"></script>
-
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
         <style>
-              @font-face{
-            font-family: Bebas;
-            src: url('../assets/bebas.otf');
+        @font-face{
+            font-family: 'Bebas';
+            src: url('assets/bebas.otf');
         }
         body {
             background-color: #4089AA;
@@ -90,23 +90,50 @@
             }
 
         }
-
+        .no-js #loader { display: none;  }
+        .js #loader { display: block; position: absolute; left: 100px; top: 0; }
+        .se-pre-con {
+            position: fixed;
+            left: 0px;
+            top: 0px;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            background: url(img/Preloader.gif) center no-repeat #fff;
+        }
+        .se-pre-con span{
+            text-align: center;
+            font-size: 15px;
+            position: absolute;
+            left: 0;
+            right: 0;
+            top: 55%;
+            font-family: 'Bebas';
+            transform: translateY(-50%);
+        }
         </style>
     </head>
     <body>
+        <div class="se-pre-con"><span>Loading SuFishInt</span></div>
         <div id="map"></div>
         <div id="status"></div>
         <div class="container text-center">
-            <img src="../assets/projsuf_logo.png" class="logo img-responsive center-block" />
+            <img src="assets/projsuf_logo.png" class="logo img-responsive center-block" />
 
             <p class="head_one">Promoting Sustainable Fisheries through <br/> Responsible Fishing</p>
             <p class="head_two">LOGIN AS</p>
-            <a href="../others/login/userlogin.html" class="btn btn-primary">SUFISHINT WATCHER</a>
-            <a href="../others/login/vessel-login.html" class="btn btn-warning">COMMERCIAL VESSEL</a>
+            <a href="others/login/userlogin.html" class="btn btn-primary">SUFISHINT WATCHER</a>
+            <a href="others/login/vessel-login.html" class="btn btn-warning">COMMERCIAL VESSEL</a>
         </div>
-        <script type="text/javascript" src="../cordova.js"></script>
-        <script type="text/javascript" src="../js/index.js"></script>
+        <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.min.js" integrity="sha384-I6F5OKECLVtK/BL+8iSLDEHowSAfUo76ZL9+kGAgTRdiByINKJaqTPH/QVNS1VDb" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+        <script>
+            $(window).load(function() {
+                // Animate loader off screen
+                $(".se-pre-con").fadeOut("slow");;
+            });
+        </script>
     </body>
 </html>
