--- a/www/modules/calendar.html
+++ b/www/modules/calendar.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,700' rel='stylesheet' type='text/css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	 <!-- Latest compiled and minified JavaScript -->
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
 	<link href='fullcalendar.css' rel='stylesheet' />
@@ -181,9 +181,31 @@
 		.cal{
 			background-color: #FE802B;
 		}
+		.no-js #loader { display: none;  }
+		.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+		.se-pre-con {
+			position: fixed;
+			left: 0px;
+			top: 0px;
+			width: 100%;
+			height: 100%;
+			z-index: 9999;
+			background: url(../img/Preloader.gif) center no-repeat #fff;
+		}
+		.se-pre-con span{
+			text-align: center;
+			font-size: 15px;
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 55%;
+			font-family: 'Bebas';
+			transform: translateY(-50%);
+		}
 </style>
 </head>
 <body>
+<div class="se-pre-con"><span>Fetching number of vessels</span></div>
 <div id="map"></div>
 	<div class="container top-banner">
 	  <img src="../assets/projsuf_logo.png" class="img-responsive logo" />
