--- a/platforms/android/assets/www/modules/info_page.html
+++ b/platforms/android/assets/www/modules/info_page.html
@@ -12,13 +12,15 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,700' rel='stylesheet' type='text/css'>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
 	<style>
 		@font-face{
 			font-family: 'Bebas';
-			src: url('assets/bebas.otf');
+			src: url('../assets/bebas.otf');
 		}
 		.header{
-				background-image: url('assets/images/Sardines.jpg');
+				background-image: url('../assets/images/Sardines.jpg');
 				background-position: right;
 				background-repeat: no-repeat;
 				height: 230px;
@@ -92,29 +94,50 @@
 		}
 
 		.temp{
-			font-family:Bebas;
+			font-family:'Bebas';
 			font-size:30px;
 			color: #fff;
 			margin-top:-20px;
 		}
 		.temp-info{
 			color:#fff;
-			font-family:Bebas;
+			font-family:'Bebas';
 		}
 		.temp-info{
 			margin-left:150px;
 			margin-top:-40px;
 		}
+		.no-js #loader { display: none;  }
+		.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+		.se-pre-con {
+			position: fixed;
+			left: 0px;
+			top: 0px;
+			width: 100%;
+			height: 100%;
+			z-index: 9999;
+			background: url(../img/Preloader.gif) center no-repeat #fff;
+		}
+		.se-pre-con span{
+			text-align: center;
+			font-size: 15px;
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 55%;
+			font-family: 'Bebas';
+			transform: translateY(-50%);
+		}
 	</style>
 </head>
 <body>
-
+ <div class="se-pre-con"><span>Loading SuFishInt</span></div>
 	<div class="container header">
-		<img src="assets/projsuf_logo.png" class="img-responsive" />
+		<img src="../assets/projsuf_logo.png" class="img-responsive" />
 			<h1 class="text-center">ZAMBOANGA</h1>
 		<div class="row">
 			<div class="col-md-1">
-				<img src="img/weather-icon.png" class="weather-icon">
+				<img src="../img/weather-icon.png" class="weather-icon">
 			</div>
 			<div class="col-md-2">
 				<h5 class="temp">34*C</h5>
@@ -128,7 +151,7 @@
 	</div>
 	<br/>
 	<div class="container">
-		<p>&nbsp;&nbsp;Zamboanga City (Zamboangueño Chavacano: Ciudad de Zamboanga) is a highly urbanized city located in Mindanao, Philippines. It has a population of 807,129 people as of the 1 May 2010 census. Zamboanga is the 6th most populous and 3rd largest city by land area in the Philippines.[3][4] It is the commercial and industrial center of the Zamboanga Peninsula Region.</p> 
+		<p>&nbsp;&nbsp;Zamboanga City (Zamboangueño Chavacano: Ciudad de Zamboanga) is a highly urbanized city located in Mindanao, Philippines. It has a population of 807,129 people as of the 1 May 2010 census. Zamboanga is the 6th most populous and 3rd largest city by land area in the Philippines.[3][4] It is the commercial and industrial center of the Zamboanga Peninsula Region.</p>
 		<p>Fishing Policies/Regulation</p>
 		<p>1. License and Permits</p>
 		<p>2. Report of Fish Caught</p>
@@ -151,5 +174,11 @@
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	 <!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	      <script>
+            $(window).load(function() {
+                // Animate loader off screen
+                $(".se-pre-con").fadeOut("slow");;
+            });
+        </script>
 </body>
 </html>
