--- a/platforms/android/assets/www/modules/register_watch.html
+++ b/platforms/android/assets/www/modules/register_watch.html
@@ -15,7 +15,7 @@
 	<style>
 		@font-face{
 			font-family: 'Bebas';
-			src: url('assets/bebas.otf');
+			src: url('../assets/bebas.otf');
 		}
 		body{
 				background-color: #4089AA;
@@ -52,23 +52,17 @@
 		}
 
 	</style>
-			<script type="text/javascript" src="js/jquery.js"></script>
-	<script type="text/javascript" src="others/login/scripts/custom.js"></script>
+		<script type="text/javascript" src="../js/jquery.js"></script>
+	<script type="text/javascript" src="../others/login/scripts/custom.js"></script>
 </head>
 <body>
 
 	<div class="container">
-		<img src="assets/projsuf_logo.png" class="img-responsive" />
-			<h3 class="text-center">COMMERCIAL VESSEL</h3>
-				<p class="text-center">If you do not have a license number, please contact DA-BFAR: +63(2)929-9897</p>
+		<img src="../assets/projsuf_logo.png" class="img-responsive" />
+			<h3 class="text-center">SUFISHENT WATCHER</h3>
+				<p class="text-center">All sufishent watchers must register to create an account</p>
 					<div class="form-group">
-						<input type="text" class="form-control" id="license" placeholder="License Number">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" id="company" placeholder="Company Name">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" id="officer" placeholder="Officer">
+						<input type="text" class="form-control" id="name" placeholder="Complete Name">
 					</div>
 					<div class="form-group">
 						<input type="text" class="form-control" id="number" placeholder="Contact Number">
@@ -79,7 +73,7 @@
 					<div class="form-group">
 						<input type="password" class="form-control" id="password" placeholder="Password">
 					</div>
-					<a href="#!" type="button" class="btn btn-primary center" id="register_vessel">Register</a>
+					<a href="#!" type="button" class="btn btn-primary center" id="register_watch">Register</a>
 
 
 	</div>
