--- a/platforms/android/assets/www/modules/specie_select.html
+++ b/platforms/android/assets/www/modules/specie_select.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:300,700' rel='stylesheet' type='text/css'>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
 	 <!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
@@ -32,7 +33,11 @@
 			defaultView: 'month',
 			editable: true,
 		});
-		
+		$(window).load(function() {
+			// Animate loader off screen
+			$(".se-pre-con").fadeOut("slow");;
+		});
+
 	});
 
 
@@ -41,7 +46,7 @@
 <style>
 	@font-face{
 			font-family: 'Bebas';
-			src: url('assets/bebas.otf');
+			src: url('../assets/bebas.otf');
 		}
 	body {
 		font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
@@ -100,7 +105,7 @@
 			font-family: 'Bebas';
 			color: white;
 			float: right;
-			
+
 		}
 		h3,h4{
 			margin-top: -60px;
@@ -120,7 +125,6 @@
 			color:white;
 			font-size: 22px;
 			margin-left: 20px;
-			mar
 		}
 		.list-group .list-group-item{
 			background-color: #FE802B;
@@ -129,21 +133,42 @@
 			padding-left: 100px;
 
 		}
+		.no-js #loader { display: none;  }
+		.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+		.se-pre-con {
+			position: fixed;
+			left: 0px;
+			top: 0px;
+			width: 100%;
+			height: 100%;
+			z-index: 9999;
+			background: url(../img/Preloader.gif) center no-repeat #fff;
+		}
+		.se-pre-con span{
+			text-align: center;
+			font-size: 15px;
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 55%;
+			font-family: 'Bebas';
+			transform: translateY(-50%);
+		}
 </style>
 </head>
 <body>
-
+ <div class="se-pre-con"><span>Loading SuFishInt</span></div>
 	<div class="container top-banner">
-	  <img src="assets/projsuf_logo.png" class="img-responsive logo" />
+	  <img src="../assets/projsuf_logo.png" class="img-responsive logo" />
 		<h3>ZAMBOANGA</h3><br/><br/>
 			<h4>COORDINATES: 6.9214°N, 122.0790°E</h4>
 	</div>
 	<ul class="list-group">
-		<li class="list-group-item"><img src="assets/images/sardin_2.jpg" alt="sardines_logo" class="img-circle"><a href="habitat.html" class="text-center">Sardines <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>
-		<li class="list-group-item"><img src="assets/projsuf_logo.png" class="img-circle"><a href="#!" class="text-center">Unlockable Specie 2</a></li>
-		<li class="list-group-item"><img src="assets/projsuf_logo.png" class="img-circle"><a href="#!" class="text-center">Unlockable Specie 3</a></li>
-		<li class="list-group-item"><img src="assets/projsuf_logo.png" class="img-circle"><a href="#!" class="text-center">Unlockable Specie 4</a></li>
-		<li class="list-group-item"><img src="assets/projsuf_logo.png" class="img-circle"><a href="#!" class="text-center">Unlockable Specie 5</a></li>
+		<li class="list-group-item"><img src="../assets/images/sardin_2.jpg" alt="sardines_logo" class="img-circle"><a href="habitat.html" class="text-center">Sardines <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>
+		<li class="list-group-item"><img src="../assets/projsuf_logo.png" class="img-circle"><a href="#!" class="text-center">Unlockable Specie 2</a></li>
+		<li class="list-group-item"><img src="../assets/projsuf_logo.png" class="img-circle"><a href="#!" class="text-center">Unlockable Specie 3</a></li>
+		<li class="list-group-item"><img src="../assets/projsuf_logo.png" class="img-circle"><a href="#!" class="text-center">Unlockable Specie 4</a></li>
+		<li class="list-group-item"><img src="../assets/projsuf_logo.png" class="img-circle"><a href="#!" class="text-center">Unlockable Specie 5</a></li>
 	</ul>
 
 
@@ -152,7 +177,7 @@
 
 	<footer class="footer">
       <div class="container">
-        <a class="text-muted" href="index.html"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> BACK</a>
+        <a class="text-muted" href="../index.html"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> BACK</a>
       </div>
     </footer>
 
