--- a/platforms/android/assets/www/others/gps/gps.html
+++ b/platforms/android/assets/www/others/gps/gps.html
@@ -180,7 +180,7 @@
 				<p style="color:white;font-size:10px;margin-top:-10px">BMC Beta |VN| 0 knots/0</p>
 				<p style="color:white;font-size:10px;margin-top:-10px">Position Received: 2mins ago</p>
 				<p style="color:white;font-size:10px;margin-top:-10px">Destination: Taiwan</p>
-				<div class="pull-right btn-view-loc"><a href="../../calendar.html" onclick="initMap()" class="btn btn-warning">Back to Calendar</a>
+				<div class="pull-right btn-view-loc"><a href="../../modules/calendar.html" onclick="initMap()" class="btn btn-warning">Back to Calendar</a>
 				</div>
 		</div>
 	</div>
